fix: header z-index

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -24,6 +24,7 @@ body {
   background: inherit;
   margin: 0 auto;
   padding: 64px 8vw 0;
+  z-index: 9999;
 }
 
 .header-container {
